--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0"
+    "vue-axios": "^3.5.2",
+    "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.1.6",
+    "vue3-toastify": "^0.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
